[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wisepay-observability"
description = "Shared OpenSearch/OTEL structured logging for wisepay services"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dynamic = ["version"]
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "python-json-logger",
    "opensearch-py",
    "httpx",
    "starlette",
]

[project.urls]
Repository = "https://github.com/wisepayru/observability"

[tool.setuptools.packages.find]
where = ["."]
include = ["observability*"]

[tool.setuptools_scm]
